# move_kd_retrieval

./: eval.py  losses.py  pyproject.toml  requirements.txt  train.py
data/: flickr30k.py
models/: adapters.py  moe_lora.py  student_vit.py  teachers.py
