[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "move-kd-retrieval"
version = "0.1.0"
description = "Cross-modal retrieval KD with MoE+LoRA and attention guidance"
readme = ""
requires-python = ">=3.9"
dependencies = [
  "torch>=2.1",
  "torchvision>=0.16",
  "transformers>=4.37",
  "timm>=0.9.2",
  "datasets>=2.18",
  "accelerate>=0.21",
]

[project.optional-dependencies]
train = ["deepspeed>=0.12"]